--- a/css/main.css
+++ b/css/main.css
@@ -416,8 +416,16 @@ main#home h1 {
     transform: translate3d(0, 100%, 0);
     background: rgba(45, 45, 45, 0.9);
   }
+  .about-info {
+    grid-template-areas: "bio-image" "bio" "job1" "job2" "job3";
+    grid-template-columns: auto;
+  }
   .projects {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .boxes .box {
+    font-size: 1rem;
+    margin-bottom: 3rem;
   }
 }
 
