--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 body {
     @include background();
     background: $primary-color;
-    height: 100%;
+    height: 100vh;
     color: set-text-color($primary-color);
     line-height: 1.5;
     margin: 0;
@@ -35,7 +35,7 @@ a {
 
 #particles-js {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     z-index: -10;
     top: 0;
