--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ body#bg-img::after {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background: rgba(68, 68, 68, 0.7);
   z-index: -11;
