--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -40,7 +40,7 @@ $overlay-opacity: 0.9;
                 position: absolute;
                 top: 0;
                 left: 0;
-                height: 100%;
+                height: 100vh;
                 width: 100%;
                 background: rgba($primary-color, 0.7);
                 z-index: -11;
