--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -56,7 +56,7 @@
         transform: translate3d(100%, 0, 0);
     }
     ul.menu-nav {
-        height: 75vh;
+        height: 100%;
         font-size: 1.5rem;
         transform: translate3d(0, 100%, 0);
         background: darken(rgba($primary_color, $overlay-opacity), 9);
