--- a/css/main.css
+++ b/css/main.css
@@ -228,10 +228,6 @@ main#home {
   overflow: hidden;
 }
 
-main#home h1 {
-  margin-top: 20vh;
-}
-
 .about-info {
   display: grid;
   gap: 2vw;
@@ -384,6 +380,11 @@ main#home h1 {
 @media screen and (max-width: 768px) {
   header {
     position: static;
+  }
+  main#home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   main {
     align-items: center;
