--- a/css/main.css
+++ b/css/main.css
@@ -389,6 +389,7 @@ main#home {
   main .lg-heading {
     line-height: 1;
     margin-bottom: 1rem;
+    font-size: 2rem;
   }
   ul.menu-nav,
   div.menu-branding {
