--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -32,6 +32,7 @@
         .lg-heading {
             line-height: 1;
             margin-bottom: 1rem;
+            font-size: 2rem;
         }
     }
     ul.menu-nav,
