--- a/css/main.css
+++ b/css/main.css
@@ -207,6 +207,8 @@ main {
   padding: 4rem;
   z-index: 2;
   min-height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
 }
 
 main .icons {
@@ -368,6 +370,9 @@ main#home {
 @media screen and (min-width: 1171px) {
   .projects {
     grid-template-columns: repeat(4, 1fr);
+  }
+  main#home h1 {
+    margin-top: 20vh;
   }
 }
 
