--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,6 +3,13 @@
     .projects {
         grid-template-columns: repeat(4, 1fr);
     }
+    main {
+        &#home {
+            h1 {
+                margin-top: 20vh;
+            }
+        }
+    }
 }
 
 // Desktops and laptops
