--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,6 +57,8 @@ main {
     padding: 4rem;
     z-index: 2;
     min-height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
     .icons {
         display: flex;
         .social-icon {
