--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,6 @@
-$primary-color: #444;
+$primary-color: #000000;
 $text-color: set-text-color($primary-color);
-$secondary-color: #6638f1;
+$secondary-color: #00A2E2;
 $show-home-image: true;
 $home-image: url(/assets/background.jpg);
 $overlay-opacity: 0.9;
