--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -56,7 +56,7 @@
         }
     }
     &-branding {
-        background: rgba($primary_color, $overlay-opacity);
+        background: lighten( rgba($primary_color, $overlay-opacity), 10);
         transform: translate3d(-100%, 0, 0);
         @include easeOut;
         &.show {
