--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,7 @@ h3 {
     &.sm-heading {
         margin-bottom: 2rem;
         padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color, 2), 0.5);
+        background: rgba(lighten($primary-color, 25), 0.5);
     }
 }
 
@@ -107,7 +107,7 @@ main {
     }
     .job {
         padding: 0.5rem;
-        background-color: lighten($primary-color, 5);
+        background-color: lighten($primary-color, 10);
         border-bottom: 5px solid $secondary-color;
         h3 {
             color: lighten($secondary-color, 10);
@@ -148,7 +148,7 @@ main {
     }
     .btn-dark {
         @extend .btn;
-        background: darken($primary-color, 50);
+        background: lighten($primary-color, 20);
         color: white;
         &:hover {
             background: $secondary-color;
@@ -189,7 +189,7 @@ main {
 #main-footer {
     height: 60px;
     text-align: center;
-    background: darken($primary-color, 10);
+    background: $primary-color;
     color: set-text-color($primary-color);
     padding: 1rem;
 }
